--- a/Templet/app/build.gradle
+++ b/Templet/app/build.gradle
@@ -10,11 +10,12 @@ android {
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
-        ndk {
-            abiFilters "armeabi", "armeabi-v7a"
-        }
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        //64K
+        multiDexEnabled true
     }
+
     sourceSets {
         main {
             jniLibs.srcDirs = ['libs']
@@ -31,19 +32,21 @@ android {
 
     buildTypes {
         release {
+            //64k
             minifyEnabled true
             signingConfig signingConfigs.templet_key
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             shrinkResources true    // 自动清理无用资源
-            buildConfigField "String", "API_HOST", "\"http://pipei.fuyoukache.com/\""//API Host
+            buildConfigField "String", "API_HOST", "\"https://gps.fuyoukache.com/\""//API Host
         }
         debug {
+            //64k
             minifyEnabled false
             signingConfig signingConfigs.templet_key
-            buildConfigField "String", "API_HOST", "\"http://pipei.fuyoukache.com/\""//API Host
-            buildConfigField "String", "API_MOKE_HOST", "\"https://www.easy-mock.com/\""//API Host
+            buildConfigField "String", "API_HOST", "\"https://d3gps.fuyoukache.com/\""//API Host
         }
     }
+
     packagingOptions {
         exclude 'META-INF/rxjava.properties'
         exclude 'LICENSE.txt'
@@ -54,23 +57,34 @@ android {
         exclude 'META-INF/NOTICE'
     }
     compileOptions {
-        targetCompatibility 1.8
-        sourceCompatibility 1.8
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 
+    configurations.all {
+        resolutionStrategy.force 'com.android.support:support-annotations:25.3.0'
+    }
+
+    dexOptions {
+        jumboMode true
+        javaMaxHeapSize "4g"
     }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation project(':CommonLib')
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+    androidTestImplementation ('com.android.support.test.espresso:espresso-core:3.0.2') {
+        exclude module: 'support-annotations'
+    }
 
+    implementation project(':CommonLib')
     //walle 多渠道打包
     implementation 'com.meituan.android.walle:library:1.1.6'
+    implementation project(':CommonUI')
 }
 walle {
     apkOutputFolder = new File("${project.buildDir}/outputs/channels")
